--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,9 @@ Version: 1.1.4
 Date: 2014-07-17
 Author: Thomas Alexander Gerds, Thomas Harder Scheike
 Depends:
-    R (>= 2.9.0)
+    R (>= 2.9.0),
+    prodlim (>= 1.4.9)
 Imports:
-    prodlim (>= 1.4.9),
     rms (>= 4.2-0),
     pec (>= 2.4.3),
     cmprsk (>= 2.2-7),
