fixed bugs for next CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,28 @@ export(LRR)
 export(plotEffects)
 export(riskRegression)
 export(subjectWeights)
+importFrom(grDevices,col2rgb)
+importFrom(graphics,abline)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,polygon)
 importFrom(prodlim,Hist)
+importFrom(stats,as.formula)
+importFrom(stats,delete.response)
+importFrom(stats,formula)
+importFrom(stats,get_all_vars)
+importFrom(stats,median)
+importFrom(stats,na.omit)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,reformulate)
+importFrom(stats,terms)
+importFrom(stats,terms.formula)
+importFrom(stats,time)
+importFrom(stats,update)
+importFrom(stats,update.formula)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 useDynLib(riskRegression)
