--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,7 @@
 Package: riskRegression
 Type: Package
-Title: Risk regression models for survival analysis with competing risks
-Version: 1.1.6
-Date: 2014-07-17
+Title: Risk Regression Models for Survival Analysis with Competing Risks
+Version: 1.1.7
 Author: Thomas Alexander Gerds, Thomas Harder Scheike
 Depends:
     R (>= 2.9.0),
