--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ S3method(plot,predictedRisk)
 S3method(plot,riskRegression)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
+S3method(predictHazard,coxph)
+S3method(predictSurvProb,coxph)
+S3method(predictEventProb,CauseSpecificCox)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,riskRegression)
@@ -20,15 +23,14 @@ S3method(subjectWeights,nonpar)
 S3method(summary,FGR)
 S3method(summary,riskRegression)
 export(ARR)
-export(BaseHazStrata_cpp)
 export(CSC)
 export(FGR)
 export(LRR)
 export(plotEffects)
 export(riskRegression)
 export(subjectWeights)
-importFrom(Rcpp,evalCpp)
-importFrom(Rcpp,sourceCpp)
+
+import(data.table)
 importFrom(grDevices,col2rgb)
 importFrom(graphics,abline)
 importFrom(graphics,lines)
@@ -36,6 +38,8 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,polygon)
 importFrom(prodlim,Hist)
+importFrom(Rcpp,evalCpp)
+importFrom(Rcpp,sourceCpp)
 importFrom(stats,as.formula)
 importFrom(stats,delete.response)
 importFrom(stats,formula)
