Update predict functions + tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method(plot,predictedRisk)
 S3method(plot,riskRegression)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
-S3method(predictEventProbRR,CauseSpecificCox)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,riskRegression)
@@ -25,7 +24,7 @@ export(FGR)
 export(LRR)
 export(baseHazRR)
 export(plotEffects)
-export(predictEventProbRR)
+export(predictEvent)
 export(predictSurv)
 export(riskRegression)
 export(subjectWeights)
