--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,10 +24,8 @@ export(CSC)
 export(FGR)
 export(LRR)
 export(ateCSC)
-export(baseHazRR)
 export(plotEffects)
-export(predictEvent)
-export(predictSurv)
+export(predictCox)
 export(riskRegression)
 export(subjectWeights)
 importFrom(Rcpp,evalCpp)
