final fixes before test on serum server

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,8 @@ importFrom(prodlim,dimColor)
 importFrom(prodlim,jackknife)
 importFrom(prodlim,prodlim)
 importFrom(prodlim,sindex)
+importFrom(rms,cph)
+importFrom(rms,strat)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,delete.response)
@@ -140,6 +142,7 @@ importFrom(stats,var)
 importFrom(stats,wilcox.test)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
+importFrom(survival,strata)
 importFrom(utils,capture.output)
 importFrom(utils,head)
 importFrom(utils,select.list)
