--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,9 @@ S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
 S3method(plot,predictedRisk)
 S3method(plot,riskRegression)
-S3method(plot,score.AUC)
 S3method(plot,score.Brier)
-S3method(plot,score.ROC)
+S3method(plot,scoreAUC)
+S3method(plot,scoreROC)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
