--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,6 @@ S3method(plot,highscore)
 S3method(plot,predictedRisk)
 S3method(plot,riskRegression)
 S3method(plot,score.Brier)
-S3method(plot,scoreAUC)
-S3method(plot,scoreROC)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -65,7 +63,9 @@ export(colCumSum)
 export(colSumsCrossprod)
 export(ipcw)
 export(penalizedS3)
+export(plotAUC)
 export(plotEffects)
+export(plotROC)
 export(predictCox)
 export(predictRisk)
 export(riskRegression)
