C++ implementation of predict.CSC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
+S3method(predictBig,CauseSpecificCox)
 S3method(predictRisk,ARR)
 S3method(predictRisk,BinaryTree)
 S3method(predictRisk,CauseSpecificCox)
