Transform ateCSC to ateCox

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,7 +42,7 @@ S3method(predictRisk,survfit)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
-S3method(print,ateCSC)
+S3method(print,ateCox)
 S3method(print,highscore)
 S3method(print,riskRegression)
 S3method(print,subjectWeights)
@@ -58,7 +58,7 @@ export(CSC)
 export(FGR)
 export(LRR)
 export(Score)
-export(ateCSC)
+export(ateCox)
 export(colCumSum)
 export(colSumsCrossprod)
 export(ipcw)
