--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,8 +28,10 @@ S3method(predictRisk,default)
 S3method(predictRisk,double)
 S3method(predictRisk,formula)
 S3method(predictRisk,glm)
+S3method(predictRisk,integer)
 S3method(predictRisk,lrm)
 S3method(predictRisk,matrix)
+S3method(predictRisk,numeric)
 S3method(predictRisk,penfitS3)
 S3method(predictRisk,prodlim)
 S3method(predictRisk,psm)
@@ -42,6 +44,7 @@ S3method(predictRisk,survfit)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
+S3method(print,ate)
 S3method(print,ateCox)
 S3method(print,highscore)
 S3method(print,riskRegression)
@@ -58,6 +61,7 @@ export(CSC)
 export(FGR)
 export(LRR)
 export(Score)
+export(ate)
 export(ateCox)
 export(colCumSum)
 export(colSumsCrossprod)
