--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,6 @@ S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
 S3method(print,ate)
-S3method(print,ateCox)
 S3method(print,highscore)
 S3method(print,riskRegression)
 S3method(print,subjectWeights)
@@ -62,7 +61,6 @@ export(FGR)
 export(LRR)
 export(Score)
 export(ate)
-export(ateCox)
 export(colCumSum)
 export(colSumsCrossprod)
 export(ipcw)
@@ -89,6 +87,9 @@ importFrom(data.table,setnames)
 importFrom(data.table,setorder)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,ggplot)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,gray)
 importFrom(graphics,abline)
