--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,7 @@ importFrom(rms,strat)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,delete.response)
+importFrom(stats,drop.terms)
 importFrom(stats,family)
 importFrom(stats,formula)
 importFrom(stats,get_all_vars)
@@ -149,6 +150,7 @@ importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,strata)
 importFrom(utils,capture.output)
+importFrom(utils,find)
 importFrom(utils,head)
 importFrom(utils,select.list)
 useDynLib(riskRegression)
