rm ateCSC and ateCox from namespace fix some of the notes with ggplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,8 +45,6 @@ S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
 S3method(print,ate)
-S3method(print,ateCSC)
-S3method(print,ateCox)
 S3method(print,highscore)
 S3method(print,riskRegression)
 S3method(print,subjectWeights)
@@ -63,8 +61,6 @@ export(FGR)
 export(LRR)
 export(Score)
 export(ate)
-export(ateCSC)
-export(ateCox)
 export(colCumSum)
 export(colSumsCrossprod)
 export(ipcw)
@@ -91,9 +87,19 @@ importFrom(data.table,setnames)
 importFrom(data.table,setorder)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_rect)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_colour_manual)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,gray)
 importFrom(graphics,abline)
