Restaure constrain on the version of rms package + NAMESPACE file with S3method for plot.xx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
+S3method(plot,predictedRisk)
+S3method(plot,riskRegression)
 S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -62,9 +65,6 @@ export(colCumSum)
 export(colSumsCrossprod)
 export(ipcw)
 export(penalizedS3)
-export(plot.CauseSpecificCox)
-export(plot.predictedRisk)
-export(plot.riskRegression)
 export(plotAUC)
 export(plotEffects)
 export(plotROC)
