Correct ICbeta + add ICLambda0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(Score,list)
 S3method(boxplot,Score)
 S3method(coef,riskRegression)
+S3method(iid,coxph)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
 S3method(ipcw,marginal)
@@ -63,6 +64,7 @@ export(Score)
 export(ate)
 export(colCumSum)
 export(colSumsCrossprod)
+export(iid)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
