Re-organise iid, predictCox, predict.CSC - using getteurs for cph/coxph models to extract the relevant information

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,6 +59,7 @@ Collate:
   'FGR.R'
   'getCensoringWeights.R'
   'getComparisons.R'
+  'getCoxInfo.R'
   'getInfluenceCurve.R'
   'getNullModel.R'
   'getPseudoValues.R'
