--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(Score,list)
 S3method(boxplot,Score)
 S3method(coef,riskRegression)
-S3method(iid,coxph)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
 S3method(ipcw,marginal)
@@ -64,7 +63,7 @@ export(Score)
 export(ate)
 export(colCumSum)
 export(colSumsCrossprod)
-export(iid)
+export(iidCox)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
@@ -81,7 +80,9 @@ importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(cmprsk,predict.crr)
 importFrom(data.table,":=")
+importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,is.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
@@ -165,4 +166,5 @@ importFrom(utils,capture.output)
 importFrom(utils,find)
 importFrom(utils,head)
 importFrom(utils,select.list)
+importFrom(utils,tail)
 useDynLib(riskRegression)
