Update influence function for interactions and categorical variables + clean getInfoCox

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
-S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
-S3method(plot,predictedRisk)
-S3method(plot,riskRegression)
 S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -61,18 +58,25 @@ export(FGR)
 export(LRR)
 export(Score)
 export(ate)
+export(colCenter_cpp)
 export(colCumSum)
+export(colScale_cpp)
 export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
+export(plot.CauseSpecificCox)
+export(plot.predictedRisk)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotEffects)
 export(plotROC)
 export(predictCox)
 export(predictRisk)
 export(riskRegression)
+export(rowCenter_cpp)
 export(rowCumSum)
+export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(sampleData)
 export(subjectWeights)
@@ -150,6 +154,7 @@ importFrom(stats,reformulate)
 importFrom(stats,rexp)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,setNames)
 importFrom(stats,smooth)
 importFrom(stats,terms)
 importFrom(stats,terms.formula)
