removed collate field

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
+S3method(plot,predictedRisk)
+S3method(plot,riskRegression)
 S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -42,6 +45,8 @@ S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
 S3method(print,ate)
+S3method(print,ateCSC)
+S3method(print,ateCox)
 S3method(print,highscore)
 S3method(print,riskRegression)
 S3method(print,subjectWeights)
@@ -58,6 +63,8 @@ export(FGR)
 export(LRR)
 export(Score)
 export(ate)
+export(ateCSC)
+export(ateCox)
 export(colCenter_cpp)
 export(colCumSum)
 export(colScale_cpp)
@@ -65,9 +72,6 @@ export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
-export(plot.CauseSpecificCox)
-export(plot.predictedRisk)
-export(plot.riskRegression)
 export(plotAUC)
 export(plotEffects)
 export(plotROC)
