--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
+S3method(plot,predictedRisk)
+S3method(plot,riskRegression)
 S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -60,14 +63,12 @@ export(Score)
 export(ate)
 export(colCenter_cpp)
 export(colCumSum)
+export(colMultiply_cpp)
 export(colScale_cpp)
 export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
-export(plot.CauseSpecificCox)
-export(plot.predictedRisk)
-export(plot.riskRegression)
 export(plotAUC)
 export(plotEffects)
 export(plotROC)
@@ -76,6 +77,7 @@ export(predictRisk)
 export(riskRegression)
 export(rowCenter_cpp)
 export(rowCumSum)
+export(rowMultiply_cpp)
 export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(sampleData)
