add mets in suggested packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Suggests:
     party,
     rpart,
     doMC,
-    CoxBoost
+    CoxBoost,
+	mets
 Maintainer: Thomas Alexander Gerds <tag@biostat.ku.dk>
 Description: Implementation of the following methods for event history analysis.
              Risk regression models for survival endpoints also in the presence of
