--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
-S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
-S3method(plot,predictedRisk)
-S3method(plot,riskRegression)
 S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -41,6 +38,12 @@ S3method(predictRisk,riskRegression)
 S3method(predictRisk,rpart)
 S3method(predictRisk,selectCox)
 S3method(predictRisk,survfit)
+S3method(predictRiskCI,CauseSpecificCox)
+S3method(predictRiskCI,coxph)
+S3method(predictRiskCI,cph)
+S3method(predictRiskIID,CauseSpecificCox)
+S3method(predictRiskIID,coxph)
+S3method(predictRiskIID,cph)
 S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
@@ -69,11 +72,16 @@ export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
+export(plot.CauseSpecificCox)
+export(plot.predictedRisk)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotEffects)
 export(plotROC)
 export(predictCox)
 export(predictRisk)
+export(predictRiskCI)
+export(predictRiskIID)
 export(riskRegression)
 export(rowCenter_cpp)
 export(rowCumSum)
