--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
-S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
-S3method(plot,predictedRisk)
-S3method(plot,riskRegression)
 S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -75,6 +72,9 @@ export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
+export(plot.CauseSpecificCox)
+export(plot.predictedRisk)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotEffects)
 export(plotROC)
