--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(predictRisk,coxph.penal)
 S3method(predictRisk,cph)
 S3method(predictRisk,default)
 S3method(predictRisk,double)
+S3method(predictRisk,factor)
 S3method(predictRisk,formula)
 S3method(predictRisk,glm)
 S3method(predictRisk,integer)
