new calibration plot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
 S3method(plot,CauseSpecificCox)
 S3method(plot,riskRegression)
-S3method(plot,score.Brier)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -44,7 +43,6 @@ S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
 S3method(print,ate)
-S3method(print,highscore)
 S3method(print,predictCSC)
 S3method(print,riskRegression)
 S3method(print,subjectWeights)
@@ -70,6 +68,8 @@ export(iidCox)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
+export(plotBrier)
+export(plotCalibration)
 export(plotEffects)
 export(plotROC)
 export(predictCox)
@@ -81,6 +81,7 @@ export(rowMultiply_cpp)
 export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(sampleData)
+export(simMelanoma)
 export(subjectWeights)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
