add plot.predictCSC, plot.predictCox
Modifications:
- ate.R: no change
- getCoxInfo.R: no change (add folding for emacs)
- iidCox.R: no change
- predict.CauseSpecificCox.R: use the dataset used to fit the model to perform the prediction when newdata is missing
remove conf.level argument.
add the keep.newdata and keep.strata for the print/plot methods
- predictCox.R: move back to export standard error instead of confidence interval.
Add argument keep.newdata
Correct how to form the design matrix from newdata (now using prodlim::model.design)
Add class predictCox to the output
- predictRisk.R: no change
- print.predictCSC.R: update of the function
- riskRegression-package.R: update importFrom for data table/ggplot2
- iid.cpp: correct bug due to missing initialisation of cumElambda0_iter
- sweepCenterScale.cpp: no change

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
 S3method(plot,CauseSpecificCox)
 S3method(plot,highscore)
+S3method(plot,predictCSC)
+S3method(plot,predictCox)
 S3method(plot,predictedRisk)
 S3method(plot,riskRegression)
 S3method(plot,score.Brier)
@@ -42,9 +44,6 @@ S3method(predictRisk,riskRegression)
 S3method(predictRisk,rpart)
 S3method(predictRisk,selectCox)
 S3method(predictRisk,survfit)
-S3method(predictRiskCI,CauseSpecificCox)
-S3method(predictRiskCI,coxph)
-S3method(predictRiskCI,cph)
 S3method(predictRiskIID,CauseSpecificCox)
 S3method(predictRiskIID,coxph)
 S3method(predictRiskIID,cph)
@@ -53,6 +52,8 @@ S3method(print,FGR)
 S3method(print,Score)
 S3method(print,ate)
 S3method(print,highscore)
+S3method(print,predictCSC)
+S3method(print,predictCox)
 S3method(print,riskRegression)
 S3method(print,subjectWeights)
 S3method(subjectWeights,cox)
@@ -81,7 +82,6 @@ export(plotEffects)
 export(plotROC)
 export(predictCox)
 export(predictRisk)
-export(predictRiskCI)
 export(predictRiskIID)
 export(riskRegression)
 export(rowCenter_cpp)
@@ -94,10 +94,14 @@ export(subjectWeights)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(cmprsk,predict.crr)
+importFrom(data.table,".N")
+importFrom(data.table,".SD")
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
+importFrom(data.table,melt)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
@@ -107,10 +111,13 @@ importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
+importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_colour_manual)
@@ -118,6 +125,7 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,xlab)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,gray)
 importFrom(graphics,abline)
