now passing all checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(plotEffects)
 export(plotROC)
 export(predictCox)
 export(predictRisk)
+export(qplotAUC)
 export(riskRegression)
 export(rowCenter_cpp)
 export(rowCumSum)
@@ -84,6 +85,7 @@ export(rowMultiply_cpp)
 export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(sampleData)
+export(simMelanoma)
 export(subjectWeights)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
@@ -137,6 +139,7 @@ importFrom(graphics,polygon)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(lava,"transform<-")
 importFrom(prodlim,Hist)
 importFrom(prodlim,dimColor)
 importFrom(prodlim,jackknife)
