--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: riskRegression
 Type: Package
 Title: Risk Regression Models and Prediction Scores for Survival Analysis with Competing Risks
-Version: 1.2.8
+Version: 1.2.9
 Author: Thomas Alexander Gerds, Thomas Harder Scheike, Paul Blanche, Brice Ozenne
 Depends:
     R (>= 2.9.0),
@@ -17,13 +17,13 @@ Imports:
     Rcpp,
     rms (>= 5.0-0),
     stats,
+    lava (>= 1.4.7),
     survival (>= 2.40.1)
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
     boot,   
     CoxBoost,
     Daim,
-    lava,
     mets,
     party,
     pec,
