non-ggplot version of plotAUC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,8 @@ S3method(print,ate)
 S3method(print,predictCSC)
 S3method(print,predictCox)
 S3method(print,riskRegression)
+S3method(print,scoreAUC)
+S3method(print,scoreBrier)
 S3method(print,subjectWeights)
 S3method(subjectWeights,cox)
 S3method(subjectWeights,forest)
