added a debugging line which should be removed again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,4 +190,4 @@ importFrom(utils,find)
 importFrom(utils,head)
 importFrom(utils,select.list)
 importFrom(utils,tail)
-useDynLib(riskRegression)
+useDynLib(riskRegression, .registration=TRUE)
