--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
 S3method(plot,predictCSC)
-S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -72,6 +71,7 @@ export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
@@ -163,6 +163,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,model.response)
 importFrom(stats,na.fail)
 importFrom(stats,na.omit)
+importFrom(stats,optim)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
