corrected jacknife pseudo values for survival

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
 S3method(plot,predictCSC)
+S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -71,7 +72,6 @@ export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
-export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
@@ -87,6 +87,7 @@ export(rowMultiply_cpp)
 export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(sampleData)
+export(simIVF)
 export(simMelanoma)
 export(subjectWeights)
 importFrom(Rcpp,evalCpp)
