add coef function for CSC objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(Score,list)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
 S3method(boxplot,Score)
+S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
