--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(plotBrier)
 export(plotCalibration)
 export(plotEffects)
 export(plotROC)
+export(plotRisk)
 export(predictCox)
 export(predictRisk)
 export(qplotAUC)
