fixed two typos/bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(rowMultiply_cpp)
 export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(sampleData)
+export(simIVF)
 export(simMelanoma)
 export(subjectWeights)
 importFrom(Rcpp,evalCpp)
