--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_linetype_manual)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
