--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,9 @@ importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guide_legend)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_linetype_manual)
