--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(plot,ate)
 S3method(plot,predictCSC)
 S3method(plot,predictCox)
 S3method(plot,riskRegression)
@@ -90,9 +91,12 @@ export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(sampleData)
 export(simMelanoma)
+export(sliceMultiply_cpp)
+export(sliceScale_cpp)
 export(subjectWeights)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
+importFrom(abind,abind)
 importFrom(cmprsk,predict.crr)
 importFrom(data.table,".N")
 importFrom(data.table,".SD")
