--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,gray)
 importFrom(graphics,abline)
