--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ S3method(ipcw,rfsrc)
 S3method(plot,ate)
 S3method(plot,predictCSC)
 S3method(plot,predictCox)
-S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -75,6 +74,7 @@ export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
@@ -128,12 +128,14 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_continuous)
 importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_linetype_manual)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,unit)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(grDevices,col2rgb)
