--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(ipcw,rfsrc)
 S3method(plot,ate)
 S3method(plot,predictCSC)
 S3method(plot,predictCox)
+S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -74,7 +75,6 @@ export(colSumsCrossprod)
 export(iidCox)
 export(ipcw)
 export(penalizedS3)
-export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
