--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(colMultiply_cpp)
 export(colScale_cpp)
 export(colSumsCrossprod)
 export(iidCox)
+export(influenceTest)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
