Correct IF for ate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ S3method(ipcw,rfsrc)
 S3method(plot,ate)
 S3method(plot,predictCSC)
 S3method(plot,predictCox)
-S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -76,6 +75,7 @@ export(iidCox)
 export(influenceTest)
 export(ipcw)
 export(penalizedS3)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
