--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: riskRegression
 Type: Package
-Title: Risk Regression Models and Prediction Scores for Survival Analysis with Competing Risks
-Version: 1.3.12
-Author: Thomas Alexander Gerds, Thomas Harder Scheike, Paul Blanche, Brice Ozenne
+Title: Risk Regression Models and Prediction Scores for Survival Analysis with
+    Competing Risks
+Version: 1.3.13
+Author: Thomas Alexander Gerds, Thomas Harder Scheike, Paul Blanche, Brice
+    Ozenne
 Depends:
     R (>= 2.9.0),
     data.table (>= 1.10.4),
@@ -22,7 +24,7 @@ Imports:
     rms (>= 5.0-0)
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
-    boot,   
+    boot,
     CoxBoost,
     Daim,
     mets,
@@ -39,17 +41,17 @@ Suggests:
     timereg
 Maintainer: Thomas Alexander Gerds <tag@biostat.ku.dk>
 Description: Implementation of the following methods for event history analysis.
-             Risk regression models for survival endpoints also in the presence of
-             competing risks are fitted using binomial regression based on a time sequence
-             of binary event status variables. A formula interface for the Fine-Gray regression 
-             model and an interface for the combination of cause-specific Cox regression models.
-             A toolbox for assessing and
-             comparing performance of risk predictions (risk markers and risk prediction models).
-             Prediction performance is measured by the Brier score and the area under the ROC curve
-             for binary possibly time-dependent outcome.
-             Inverse probability of censoring weighting and pseudo values are used to deal with right censored data.
-             Lists of risk markers and lists of risk models are assessed simultaneously.
-             Cross-validation repeatedly splits the data, trains the risk prediction models on one part of each split
-             and then summarizes and compares the performance across splits.  
+    Risk regression models for survival endpoints also in the presence of competing
+    risks are fitted using binomial regression based on a time sequence of binary
+    event status variables. A formula interface for the Fine-Gray regression model
+    and an interface for the combination of cause-specific Cox regression models.
+    A toolbox for assessing and comparing performance of risk predictions (risk
+    markers and risk prediction models). Prediction performance is measured by the
+    Brier score and the area under the ROC curve for binary possibly time-dependent
+    outcome. Inverse probability of censoring weighting and pseudo values are used
+    to deal with right censored data. Lists of risk markers and lists of risk models
+    are assessed simultaneously. Cross-validation repeatedly splits the data, trains
+    the risk prediction models on one part of each split and then summarizes and
+    compares the performance across splits.
 License: GPL (>= 2)
 RoxygenNote: 5.0.1
