filed ggplot functions as autoplot methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,9 @@ S3method(CoxVarCov,phreg)
 S3method(Score,list)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
+S3method(autoplot,ate)
+S3method(autoplot,predictCSC)
+S3method(autoplot,predictCox)
 S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
@@ -35,7 +38,6 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
-S3method(plot,ate)
 S3method(plot,predictCSC)
 S3method(plot,predictCox)
 S3method(plot,riskRegression)
@@ -117,7 +119,6 @@ export(plotROC)
 export(plotRisk)
 export(predictCox)
 export(predictRisk)
-export(qplotAUC)
 export(riskRegression)
 export(rowCenter_cpp)
 export(rowCumSum)
