--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,6 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
-S3method(plot,predictCSC)
-S3method(plot,predictCox)
 S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
@@ -152,6 +150,7 @@ importFrom(foreach,foreach)
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,autoplot)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
