Fix bug when displaying predictCox/CSC object Update influence test and confBand.cpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ S3method(as.data.table,predictCox)
 S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
+S3method(influenceCoxTest,default)
+S3method(influenceCoxTest,list)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
 S3method(ipcw,marginal)
@@ -106,7 +108,7 @@ export(colMultiply_cpp)
 export(colScale_cpp)
 export(colSumsCrossprod)
 export(iidCox)
-export(influenceTest)
+export(influenceCoxTest)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
