--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ S3method(print,CauseSpecificCox)
 S3method(print,FGR)
 S3method(print,Score)
 S3method(print,ate)
+S3method(print,influenceCoxTest)
 S3method(print,predictCSC)
 S3method(print,predictCox)
 S3method(print,riskRegression)
