--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: riskRegression
 Type: Package
 Title: Risk Regression Models and Prediction Scores for Survival Analysis with
     Competing Risks
-Version: 1.4.6
+Version: 1.4.7
 Author: Thomas Alexander Gerds, Thomas Harder Scheike, Paul Blanche, Brice
     Ozenne
 Depends:
@@ -17,7 +17,7 @@ Imports:
     survival (>= 2.40.1),
     lava (>= 1.4.7),
     cmprsk,
-    doParallel,
+    doSNOW,
     foreach,
     parallel,
     Rcpp,
