--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,6 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
-S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -112,6 +111,7 @@ export(iidCox)
 export(influenceCoxTest)
 export(ipcw)
 export(penalizedS3)
+export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
@@ -241,5 +241,7 @@ importFrom(utils,capture.output)
 importFrom(utils,find)
 importFrom(utils,head)
 importFrom(utils,select.list)
+importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
+importFrom(utils,txtProgressBar)
 useDynLib(riskRegression, .registration=TRUE)
