ate with time-dependent covariates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,12 @@ S3method(predict,FGR)
 S3method(predict,riskRegression)
 S3method(predictRisk,ARR)
 S3method(predictRisk,BinaryTree)
+S3method(predictRisk,CSCTD)
 S3method(predictRisk,CauseSpecificCox)
 S3method(predictRisk,FGR)
 S3method(predictRisk,coxph)
 S3method(predictRisk,coxph.penal)
+S3method(predictRisk,coxphTD)
 S3method(predictRisk,cph)
 S3method(predictRisk,default)
 S3method(predictRisk,double)
@@ -132,6 +134,7 @@ export(rowScale_cpp)
 export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
+export(sampleDataTD)
 export(simMelanoma)
 export(sliceMultiply_cpp)
 export(sliceScale_cpp)
