--- a/NAMESPACE
+++ b/NAMESPACE
@@ -245,6 +245,8 @@ importFrom(stats,wilcox.test)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,strata)
+importFrom(timereg,Event)
+importFrom(timereg,comp.risk)
 importFrom(utils,capture.output)
 importFrom(utils,find)
 importFrom(utils,head)
