fixed cause-specific bug in FGR

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: R
 sudo: required
 r_check_args: "--as-cran"
 cache: packages
-warnings_are_errors: false
+warnings_are_errors: true
 
 r_github_packages:
  - cran/survival
