--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: riskRegression
 Type: Package
 Title: Risk Regression Models and Prediction Scores for Survival Analysis with
     Competing Risks
-Version: 2017.10.13
+Version: 2017.10.18
 Author: Thomas Alexander Gerds, Thomas Harder Scheike, Paul Blanche, Brice
     Ozenne
 Depends:
@@ -12,6 +12,7 @@ Depends:
     prodlim (>= 1.6.1)
 Imports:
     abind,
+    doParallel,
     stats,
     graphics,
     survival (>= 2.40.1),
@@ -19,7 +20,6 @@ Imports:
     cmprsk,
     plotrix,
     timereg (>= 1.9.1),
-    doSNOW,
     foreach,
     parallel,
     Rcpp,
