--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ S3method(ipcw,marginal)
 S3method(ipcw,none)
 S3method(ipcw,nonpar)
 S3method(ipcw,rfsrc)
+S3method(plot,riskRegression)
 S3method(predict,CauseSpecificCox)
 S3method(predict,FGR)
 S3method(predict,riskRegression)
@@ -117,7 +118,6 @@ export(iidCox)
 export(influenceCoxTest)
 export(ipcw)
 export(penalizedS3)
-export(plot.riskRegression)
 export(plotAUC)
 export(plotBrier)
 export(plotCalibration)
