progress with loob

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ export(coxSpecialStrata)
 export(coxStrata)
 export(coxVarCov)
 export(coxVariableName)
+export(getSplitMethod)
 export(iidCox)
 export(influenceCoxTest)
 export(ipcw)
