--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,10 @@ S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
 S3method(influenceCoxTest,default)
 S3method(influenceCoxTest,list)
+S3method(ipa,CauseSpecificCox)
+S3method(ipa,coxph)
+S3method(ipa,default)
+S3method(ipa,glm)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
 S3method(ipcw,marginal)
@@ -117,6 +121,7 @@ export(coxVariableName)
 export(getSplitMethod)
 export(iidCox)
 export(influenceCoxTest)
+export(ipa)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
