try to remove cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@
 language: R
 sudo: required
 r_check_args: "--as-cran"
-cache: packages
+# cache: packages
 warnings_are_errors: true
 
-r_github_packages:
- - cran/survival
+# r_github_packages:
+# - cran/survival
  
