--- a/NAMESPACE
+++ b/NAMESPACE
@@ -217,6 +217,7 @@ importFrom(rms,cph)
 importFrom(rms,strat)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
+importFrom(stats,cov)
 importFrom(stats,delete.response)
 importFrom(stats,drop.terms)
 importFrom(stats,family)
