now with loob.AUC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,6 +142,7 @@ export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
 export(sampleDataTD)
+export(selectCox)
 export(simMelanoma)
 export(sliceMultiply_cpp)
 export(sliceScale_cpp)
