--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ export(IPA)
 export(LRR)
 export(Score)
 export(ate)
+export(boot2pvalue)
 export(colCenter_cpp)
 export(colCumSum)
 export(colMultiply_cpp)
@@ -119,6 +120,7 @@ export(coxSpecialStrata)
 export(coxStrata)
 export(coxVarCov)
 export(coxVariableName)
+export(discreteRoot)
 export(getSplitMethod)
 export(iidCox)
 export(influenceCoxTest)
