re-introduced obsolete arguments

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,10 @@ Suggests:
     randomForestSRC,
     rbenchmark,
     rpart,
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
 Maintainer: Thomas Alexander Gerds <tag@biostat.ku.dk>
 Description: Implementation of the following methods for event history analysis.
     Risk regression models for survival endpoints also in the presence of competing
