fixed for CRAN checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,12 @@ Package: riskRegression
 Type: Package
 Title: Risk Regression Models and Prediction Scores for Survival Analysis with
     Competing Risks
-Version: 2018.04.17
-Author: Thomas Alexander Gerds, Thomas Harder Scheike, Paul Blanche, Brice
-    Ozenne
+Version: 2018.04.21
+Authors@R: c(person("Thomas Alexander", "Gerds", role = c("aut", "cre"),
+                    email = "tag@biostat.ku.dk"),
+             person("Paul", "Blanche", role = "ctb"),
+             person("Ulla Brasch", "Mogensen", role = "ctb"),
+             person("Brice", "Ozenne", role = "aut", email = "broz@sund.ku.dk"))
 Depends:
     R (>= 2.9.0),
     data.table (>= 1.10.4),
@@ -42,7 +45,6 @@ Suggests:
     testthat,
     knitr,
     rmarkdown
-VignetteBuilder: knitr
 Maintainer: Thomas Alexander Gerds <tag@biostat.ku.dk>
 Description: Implementation of the following methods for event history analysis.
     Risk regression models for survival endpoints also in the presence of competing
