making progress with confint + appveyor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(IPA,coxph)
 S3method(IPA,default)
 S3method(IPA,glm)
 S3method(Score,list)
+S3method(as.data.table,ate)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
 S3method(autoplot,ate)
@@ -13,6 +14,9 @@ S3method(autoplot,predictCox)
 S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
+S3method(confint,ate)
+S3method(confint,predictCSC)
+S3method(confint,predictCox)
 S3method(coxBaseEstimator,coxph)
 S3method(coxBaseEstimator,phreg)
 S3method(coxCenter,coxph)
@@ -140,7 +144,6 @@ export(rowCenter_cpp)
 export(rowCumSum)
 export(rowMultiply_cpp)
 export(rowScale_cpp)
-export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
 export(sampleDataTD)
@@ -149,6 +152,10 @@ export(simMelanoma)
 export(sliceMultiply_cpp)
 export(sliceScale_cpp)
 export(subjectWeights)
+export(transformCI)
+export(transformIID)
+export(transformP)
+export(transformSE)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(abind,abind)
