restaure C++ file + continue progress with confint

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,6 +144,7 @@ export(rowCenter_cpp)
 export(rowCumSum)
 export(rowMultiply_cpp)
 export(rowScale_cpp)
+export(rowSumsCrossprod)
 export(rsquared)
 export(sampleData)
 export(sampleDataTD)
