finish confint - should pass tests now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(IPA,default)
 S3method(IPA,glm)
 S3method(Score,list)
 S3method(as.data.table,ate)
+S3method(as.data.table,influenceTest)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
 S3method(autoplot,ate)
@@ -15,6 +16,7 @@ S3method(boxplot,Score)
 S3method(coef,CauseSpecificCox)
 S3method(coef,riskRegression)
 S3method(confint,ate)
+S3method(confint,influenceTest)
 S3method(confint,predictCSC)
 S3method(confint,predictCox)
 S3method(coxBaseEstimator,coxph)
@@ -40,8 +42,8 @@ S3method(coxStrata,coxph)
 S3method(coxVarCov,coxph)
 S3method(coxVarCov,cph)
 S3method(coxVarCov,phreg)
-S3method(influenceCoxTest,default)
-S3method(influenceCoxTest,list)
+S3method(influenceTest,default)
+S3method(influenceTest,list)
 S3method(ipcw,cox)
 S3method(ipcw,forest)
 S3method(ipcw,marginal)
@@ -84,6 +86,7 @@ S3method(print,FGR)
 S3method(print,Score)
 S3method(print,ate)
 S3method(print,influenceCoxTest)
+S3method(print,influenceTest)
 S3method(print,predictCSC)
 S3method(print,predictCox)
 S3method(print,riskRegression)
@@ -127,7 +130,7 @@ export(coxVariableName)
 export(discreteRoot)
 export(getSplitMethod)
 export(iidCox)
-export(influenceCoxTest)
+export(influenceTest)
 export(ipcw)
 export(penalizedS3)
 export(plotAUC)
@@ -150,10 +153,13 @@ export(sampleData)
 export(sampleDataTD)
 export(selectCox)
 export(simMelanoma)
+export(sliceMultiplyPointer_cpp)
 export(sliceMultiply_cpp)
+export(sliceScalePointer_cpp)
 export(sliceScale_cpp)
 export(subjectWeights)
 export(transformCI)
+export(transformCIBP)
 export(transformIID)
 export(transformP)
 export(transformSE)
