removed ID from train data for models that use ~.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(IPA,glm)
 S3method(Score,list)
 S3method(as.data.table,predictCSC)
 S3method(as.data.table,predictCox)
+S3method(autoplot,Score)
 S3method(autoplot,ate)
 S3method(autoplot,predictCSC)
 S3method(autoplot,predictCox)
